cluster-system/envoy-gateway/gateway-class.yaml
kind: GatewayClass
apiVersion: gateway.networking.k8s.io/v1
metadata:
  name: envoy-gateway-class
spec:
  controllerName: "gateway.envoyproxy.io/gatewayclass-controller"
