cluster-system/envoy-gateway/gateway.yaml
kind: Gateway
apiVersion: gateway.networking.k8s.io/v1
metadata:
  name: cluster-envoygateway
  namespace: cluster-system
  annotations:
    cert-manager.io/cluster-issuer: local-ca
spec:
  gatewayClassName: envoy-gateway-class
  listeners:
    - name: http
      hostname: "headlamp.k8s.local"
      port: 443
      protocol: HTTPS
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - name: headlamp-https-cert
            kind: Secret
            group: core
            namespace: cluster-system
